--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 \usepackage{xspace}
 \usepackage{array}
 \usepackage{cuted}
+\usepackage{tikz}
+\newcommand{\tikzcircle}[2][red,fill=red]{\tikz[baseline=-0.5ex]\draw[#1,radius=#2] (0,0) circle ;}%
+
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
 \definecolor{dg}{rgb}{0.0, 0.6, 0.1}
@@ -73,6 +76,7 @@ The observations from FERMI-LAT \cite{Su_2010} in the gamma ray regime unveiled 
 % Observations from S-PASS and Planck
 With the help of the aforementioned techniques, we can estimate the strength and direction of the magnetic field in different parts of the Galaxy. 
 For the Galactic halo the S-PASS \cite{Carretti_2013} observations  made at 2.3 GHz seem to suggest that the field strength in the halo bubbles can be anywhere between $6-10~\mu $G depending on the proton-electron ratio value adopted. S-PASS \cite{Carretti_2013} observations however are subject to depolarisation of polarised synchrotron radiation via Faraday rotation due to its relatively low observation frequencies. Additionally this data set is not sensitive to a portion of the Fermi bubble region of the sky due to the ground-based location of the instrument allowing only observations in the southern terrestrial hemisphere. For this reason data from Planck and WMAP are more helpful when probing magnetic fields in the Galactic halo due to their all-sky coverage and observation bandwidths which are not sensitive to Faraday rotation effects.
+
 % Short note on non-thermal electron distribution.
 Knowledge of non-thermal electron distribution is critical in the modelling of Galactic magnetic fields, which are both required inputs for the determination of synthetic synchrotron maps.
 We have direct information on the distribution of cosmic ray electrons at Earth from the observations made by AMS01 \cite{AMS_2002} \& \cite{AMS_2014}, CALET \cite{Calet_2017}, DAMPE \cite{Dampe_2017}. However, we do not have much knowledge of the electron distribution in the Galaxy.
@@ -86,7 +90,7 @@ Several efforts have  been made to model the magnetic fields in the Galaxy namel
 %However, when modelling Galactic magnetic fields, Galactic cosmic ray electrons are not the only particles of interest. 
 
 % Importance of UHECRs
-The propagation of cosmic rays is vital to understand their sources, and this in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extragalactic magnetic fields are presently poorly understood. Arrival direction of extragalactic cosmic rays (with energies higher than $\approx$~$10^{18}$) are also known as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can therefore be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{FARRAR_2014} \textcolor{blue}{ADD REF}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{ICRC_2021} \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, knowledge of Galactic magnetic fields is extremely important. 
+The propagation of cosmic rays is vital to understand their sources, and this in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extragalactic magnetic fields are presently poorly understood. Arrival direction of extragalactic cosmic rays (with energies higher than $\approx$~$10^{18}$) are also known as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can therefore be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{JF12},\cite{FARRAR_2014}, \cite{PT11_2011}, \cite{Sun_2008}, \cite{Sun_2010}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{ICRC_2021} \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, knowledge of Galactic magnetic fields is extremely important. 
 
 %TA hotspot reference: R. U. Abbasi et al. [Telescope Array collab.], ApJL 790 (2014) L21.
 
@@ -139,7 +143,7 @@ where $\frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}}$ is the differential electron de
 \centering
 \includegraphics[width=0.49\linewidth]{Images/Linear_EdNdE.png}%
 \includegraphics[width = 0.49\linewidth]{Images/Log_EdNdE.png}
-\caption{An example of the electron distribution for an electron energy (say) $E_e = $1~GeV, $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right. Since the electron distribution spectra peaks at 1~GeV we show the distribution for 1~GeV. $C_\mathrm{norm}$ value for this plot is $10^{-12.43}~{\rm cm}^{-3}$ (see table~\ref{Para_table}). \Andrew{Think density plot for 10~GeV electrons would make more sense (to avoid confusion).}}  %\Andrew{Why is ref. density in plots so low?}}
+\caption{An example of the electron distribution for an electron energy (say) $E_e = $10~GeV, $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right.$C_\mathrm{norm}$ value for this plot is $10^{-12.43}~{\rm cm}^{-3}$ (see table~\ref{Para_table}).}  %\Andrew{Why is ref. density in plots so low?}}
 \label{fig:electron_density}
 \end{figure*}
 
@@ -157,7 +161,7 @@ The two polarisation emission components, $J_{\perp}$ and $J_{\parallel}$, descr
 
 %\begin{strip}
 \begin{equation}
- {J_{\perp}^l} = k  \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \  \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) + G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] \
+ {J_{\perp}^l} = t  \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \  \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) + G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] \
  \label{Jperp}
 \end{equation}
 %\end{strip}
@@ -167,7 +171,7 @@ and,
 %\begin{strip}
 %\begin{widetext}
 \begin{equation}
-{J_{\parallel}^l} = k \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \ \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) - G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] 
+{J_{\parallel}^l} = t \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \ \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) - G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] 
 \label{Jpara}
 \end{equation}
 %\end{widetext}
@@ -176,7 +180,7 @@ and,
 
 where the functions,
 \begin{align}
-k = \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9}
+t = \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9}
 \\
 F(x) &= x \int_x^\infty K_{5/3}(x') dx'\\
 G(x) &= x K_{2/3}.
@@ -187,7 +191,6 @@ These expressions are provided in terms of the critical magnetic field strength,
 
 For clarity, several of the conventions we adopted are here noted. The parallel component of polarisation (${J_{\parallel}}$) is orientated in the same direction as  $\vec{B_{\perp}}$, and the perpendicular component of polarisation (${J_{\perp}}$) is perpendicular to $\vec{B_{\perp}}$. The Stokes parameters at each point along the line of sight can be written in terms of the intrinsic polarisation angle $\Psi^l_{\rm in}$ which is the angle between the line of sight perpendicular component of the magnetic field $B_{\perp}$ and Galactic south at each step. The conventions adopted here match those used by the Planck collaboration \cite{Planck_XIX} based on the $\rm HEALPix^3$~\footnote{\textcolor{purple}{https://healpix.jpl.nasa.gov/}} software by \cite{Healpix_2005}. For each step along the line-of-sight, both  ${J_{\perp}^l}$ and ${J_{\parallel}^l}$ are subsequently used to obtain the $Q$ and $U$ Stokes parameters. We obtain the values of $Q^{\rm tot}_{\rm in}$ and $U^{\rm tot}_{\rm in}$ by integrating it over the line-of-sight volume:
 
-\Vasu{Still to discuss}
 \begin{eqnarray}
 Q_{\rm in}^{\rm tot} = \frac{1}{4\pi} {\int_0^L \mathrm{d}l \ ({J_{\perp}^l} - J_{\parallel}^l) \ {\cos}(2\Psi^l_{\rm in}) } \\
 U_{\rm in}^{\rm tot} =\frac{1}{4\pi} {\int_0^L \mathrm{d}l \ ({J_{\perp}^l} - J_{\parallel}^l) \ {\sin}(2\Psi^l_{\rm in})} \,
@@ -200,7 +203,7 @@ I_{\rm pol} = \sqrt{(Q_{\rm in}^{\rm tot})^2+(U_{\rm in}^{\rm tot})^2} = J_{\per
 \end{eqnarray}
 Similarly, $I_{\rm tot}$ is computed by summing the contributions of $J_{\perp}^l$ and and $J_{\parallel}^l$ for each point along the line of sight,
 \begin{equation} \label{eq_I_tot}
-    I_{\rm tot} = \int_0^L \mathrm{d}l (J_{\perp}^l + J_{\parallel}^l).
+    I_{\rm tot} = \frac{1}{4\pi} \int_0^L \mathrm{d}l (J_{\perp}^l + J_{\parallel}^l).
 \end{equation}
 % \Andrew{NEEDS STATING IN A MATHEMATIC LANGUAGE.}
 $J_{\perp}^{\rm tot}$ and $J_{\parallel}^{\rm tot}$ are the resultant magnitudes of emissions in perpendicular and parallel directions and can be given by:
@@ -290,34 +293,36 @@ Charged particles propagating through magnetic fields, precess around the field 
 \begin{eqnarray}
 \frac{{\rm d}\bfm{\beta}}{c{\rm d}t} = \frac{1}{r_{L}}\bfm{\beta}\times \bfm{\hat{B}}, 
 \end{eqnarray}
-where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extragalactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Blasi} \Andrew{wrong reference- Blasi }, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy magnetic fields are of the order of few $\mu$G. In case for a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$ , this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
+where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extragalactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Blasi} \Andrew{wrong reference- Blasi }, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy, magnetic fields are of the order of a few $\mu$G. In case of a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$, this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
 
-We use the publicly available cosmic ray propagation code CRPropa3 \cite{CRPropa3_2016} for studying the effects of toy model magnetic fields on the arrival directions of cosmic rays. Within this software we use Boris pusher scheme in order to ensure particle's trajectory evolution satisfies the Lorentz force equation. It is important to note that CRPropa conserves the total energy each particle during the propagation.
+We use the publicly available cosmic ray propagation code CRPropa3 \cite{CRPropa3_2016} for studying the effects of toy model magnetic fields on the arrival directions of cosmic rays. Within this software we use the Boris pusher scheme in order to ensure a particle's trajectory evolution satisfies the Lorentz force equation. It is important to note that CRPropa conserves the total energy of each particle during the propagation.
 %% Setup description
-We propagate $10^7$ cosmic rays starting at earth isotropically through the toy model using backtracking scheme up to a distance of 20~kpc from the Galactic center. We use nitrogen as a choice of our cosmic ray particles at 40~EeV energy. 
+We propagate $10^7$ cosmic rays starting at earth isotropically through the toy model using the backtracking scheme up to a distance of 20~kpc from the Galactic center. We use nitrogen as a choice of our cosmic ray particles at 40~EeV energy. 
 
 \subsection{The Effect of Magnetic Field Model on UHECR Arrival}
 
-In figure~\ref{fig:AD_Plots} we show :
+In figure~\ref{fig:AD_Plots} we show:
 
 \begin{enumerate}
-    \item Magnification map in log (particles/str) of the backtracked positions for the cosmic rays (\textbf{left}). These magnification maps are made for the best-fit values (\textbf{top}), the lower bound or minimum values (\textbf{middle}) and the upper bound or maximum (\textbf{bottom}).
-    To create the these histograms we used 180 bins for both latitude and longitude. 
-    We normalise these magnification maps made with toy model fields by dividing them with maps made without any magnetic fields. In each map the blue regions denote the areas of the sky where cosmic rays are suppressed and the red regions are the ones will have an abundance of cosmic rays. These regions are sensitive to both structured and turbulent field strengths and therefore the maximum case has a larger region of suppression in comparison to best-fit and minimum cases (see table \ref{Para_table}). This effect of magnetic fields can be seen for CenA (lat = $\rm 19.42^{\circ}$, lon = $\rm 50.49^{\circ}$) and NGC 253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$) because of their positioning both the sources lie in the suppression region in the maximum case.
-    \item Skymap for arrival direction
-    of cosmic rays from two known potential UHECRs sources CenA and NGC 253 on the (\textbf{right}). Similar to the above case of the magnification maps we backtrack cosmic rays starting from earth till 20~kpc. In a region of $5^{\circ}$ from the source we plot the arrival directions of cosmic rays. Like the magnification maps we normalise these maps with no magnetic field maps.  This gives us a normalised value of the number of hits obtained as seen on the \textbf{right}.Analogous to magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the best-fit, minimum and maximum cases. We also estimate the mean value of the $5^{\circ}$ spread and the mean direction denoted by a $'\cdot'$. 
+    \item The magnification maps in log (particles/str) of the backtracked positions for the cosmic rays (\textbf{left}). These magnification maps are made for the best-fit values (\textbf{top}), the lower bound or minimum values (\textbf{middle}) and the upper bound or maximum (\textbf{bottom}) values of the parameters.
+    To create these histograms we used 180 bins for both latitudes and longitudes. 
+    We normalise these maps made with the toy model fields by dividing them with maps made without any magnetic fields. In each map the blue regions denote the areas of the sky where cosmic rays are suppressed and the red regions are the ones where the cosmic rays are abundant. The UHECR deflections are sensitive to both structured and turbulent fields and therefore the maximum case has a larger region of suppression in comparison to best-fit and minimum cases (see table \ref{Para_table}). This suppression and enhancement of UHECRs is also shown for two potential UHECR sources CenA (lat = $\rm 19.42^{\circ}$, lon = $\rm 50.49^{\circ}$) and NGC 253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$). Because of their positioning in the sky both the sources lie in the suppression region in the maximum case.
+    \item Skymap for arrival directions
+    of cosmic rays from UHECRs sources CenA and NGC 253 on the (\textbf{right}). Similar to the above case of the magnification maps we backtrack cosmic rays starting from earth till 20~kpc. In a region of $5^{\circ}$ from the source we plot the arrival directions of cosmic rays. Like the magnification maps we normalise these maps with no magnetic field maps.  This gives us a normalised value of the number of hits obtained. Analogous to magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the best-fit, minimum and maximum cases. We also estimate the mean value of the $5^{\circ}$ spread and the mean direction denoted by a \tikzcircle[black,fill = black]{2pt}. 
     The standard deviation for each source in each case is as follows:
     \begin{enumerate}
-        \item Best fit $\sigma^2_{\rm NGC 253} = $ 0.13~str , $\sigma^2_{\rm Cen A} = $0.12~str, {($\sigma_{\rm Cen~~}=20^{\circ}$)}
-        \item Maximum $\sigma^2_{\rm NGC 253} = $0.46~str, $\sigma^2_{\rm Cen A} = $0.37~str , {($\sigma_{\rm Cen~~}=35^{\circ}$)}
-        \item Minimum $\sigma^2_{\rm NGC 253} = $~0.061~str, $\sigma^2_{\rm Cen A} = $~0.066~str \Andrew{($\sigma_{\rm Cen~~}=14^{\circ}$)}\newline
+        \item Best fit $\sigma^2_{\rm NGC 253} = $ 0.13~str ($\sigma_{\rm NGC 253} = 20.65^{\circ}$ ), $\sigma^2_{\rm Cen A} =$ 0.12~str, {($\sigma_{\rm Cen~~}=20^{\circ}$)}
+        \item Maximum $\sigma^2_{\rm NGC 253} = $0.46~str ($\sigma_{\rm NGC 253} = 26.4^{\circ}$), $\sigma^2_{\rm
+        Cen A} = $0.37~str , {($\sigma_{\rm Cen~~}=35^{\circ}$)}
+        \item Minimum $\sigma^2_{\rm NGC 253} = $~0.061~str ($\sigma_{\rm NGC 253} = 3.5^{\circ}$), $\sigma^2_{\rm Cen A} = $~0.066~str {($\sigma_{\rm Cen~~}=14^{\circ}$)}
+        \newline
         \Andrew{perhaps better to quote $\sigma_{a}= b^{\circ}$}
     \end{enumerate}
 
-    It can be seen that in the maximum case it is harder to associate the cosmic rays to a source in comparison to best first or minimum case. This is due the fact that though structured fields dictate the direction of the deflection the turbulent fields spread out the directions. This is why when the turbulent fields as are stronger the arriving directions are spread out entirely over the sky making source localisation hard.
+    It can be seen that in the maximum case it is harder to associate the cosmic rays to a source in comparison to best-fit or minimum case. This is due the fact that though structured fields dictate the direction of the deflection the turbulent fields spread out the directions. This is why when the turbulent fields are stronger the arriving directions are spread out entirely over the sky.
     \end{enumerate}
     
-From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it is evident that the best fit and lower extreme (minimum) parameters can clearly help in associating the deflected particles with their potential source. However, in the upper extreme (maximum) parameters any connection between the point of origin of cosmic rays and their final positions is inconclusive. Cosmic rays from  sources like NGC253 get completely deflected by the magnetic field and hence we obtain a suppressed flux $\approx 5\%$ . In case of Centaurus A the final positions are spread out on the entire sky making it impossible to associate it with the source.
+From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it is evident that the best fit and lower extreme (minimum) parameters can clearly help in associating the deflected particles with their potential source. However, in the upper extreme (maximum) parameters any connection between the point of origin of cosmic rays and their final positions is inconclusive. Cosmic rays from  sources like NGC253 get completely deflected by the magnetic field and hence we obtain a suppressed flux $\approx 5\%$. In case of Centaurus A the final positions are spread out on the entire sky making it impossible to associate it with the source.
 
  %In table~{\ref{AD_table}} we show the 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -400,7 +405,7 @@ From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it
 \includegraphics[width=0.49\linewidth]{Images/Log_Bins_180_Historgam_UB_N2_Str_Tur_TM_40_EeV.png}
 \includegraphics[width=0.49\linewidth]{Images/Bins_180_UB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}\
 \hspace*{+9cm}                                      \includegraphics[width=0.50\linewidth]{Images/Colorbar.png}
-\caption{Log brightness of the backtracked positions for cosmic rays shown on \textbf{left} and the binned arrival directions of the cosmic rays from two known sources Cen A and NGC 253 on \textbf{right} (From table~\ref{Para_table} \textbf{Top} - Best Fit Parameters, {\textbf{Middle} - Lower extreme parameters)} \& {\textbf{Bottom} - Upper extreme parameters, we use $R_{\rm Mag} = $ 20~kpc since that is the maximum extent of the magnetic fields in our simulation. The grey colour bar is to denote the intensity of the hits for the plots on the \textbf{right}. }
+\caption{Log brightness of the backtracked positions for cosmic rays shown on \textbf{left} and the binned arrival directions of the cosmic rays from two known sources Cen A and NGC 253 on \textbf{right} (From table~\ref{Para_table} \textbf{Top} - Best Fit Parameters, {\textbf{Middle} - Lower extreme parameters)} \& {\textbf{Bottom} - Upper extreme parameters, we use $R_{\rm Mag} = $ 20~kpc since that is the maximum extent of the magnetic fields in our simulation. The grey colour bar is to denote the intensity of the hits for the plots on the \textbf{right}. We  plot these maps by normalising them with the case of no magnetic fields.}
 \Vasu{describe the normalisation}}
 \label{fig:AD_Plots}
 \end{figure*}
@@ -413,25 +418,23 @@ From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it
 % \end{frame}
 \section{Conclusions}
 \label{Conclusions}
-One primary conclusion of our study is to highlight the importance of the presence of magnetic fields and non-thermal electrons at high latitudes in order to explain the radio observations. It is important to note that for equipartition of energy to be valid if magnetic fields dominate then electron density has to be lower.
+One primary conclusion of our study is to highlight the importance of the presence of magnetic fields and non-thermal electrons at high latitudes in order to explain the radio observations. It is important to note that for equipartition of energy \cite{Drury_2012} to be valid if magnetic fields dominate then electron density has to be lower.
 %By definition of equipartition of energy the ratio between thermal pressure and magnetic pressure also known as plasma $\beta$ condition the magnetic the total energy in magnetic fields should be comparable to thermal particles \cite{Drury_2012}.
-Our toy model motivates magnetic field with a total energy content of $\approx 10^{55}$~ergs and the total energy in cosmic ray protons at 1 GeV $\approx 4\times 10^{55}$~ergs. These values are comparable with observations made by \cite{Su_2010} and \cite{eROSITA}.In comparison the total energy values in the halo fields of the JF12 model $4\times 10^{54}$~ergs and $3\times  10^{54}$~ergs for the torroidal halo and X-field respectively \cite{Taylor_2019}.
-Another inference 
+Our toy model motivates magnetic field with a total energy content of $\approx 10^{55}$~ergs and the total energy in cosmic ray protons at 1 GeV $\approx 4\times 10^{55}$~ergs. These values are comparable with observations made by \cite{Su_2010} and \cite{eROSITA}. In comparison the total energy values in the halo fields of the JF12 model $4\times 10^{54}$~ergs and $3\times  10^{54}$~ergs for the torroidal halo and X-field respectively \cite{Taylor_2019}.
+
+Another important conclusion of this study is the effect of propagation of uncertainities in the arrival directions of UHECRs. The large uncertainties on the magnetic fields can make source localisation for UHECRs impossible.
+Therefore, the halo region of the magnetic field cannot be ignored while modelling Galactic magnetic fields. 
+
+\Vasu{Incomplete still, we need more to be added.}
+Observations from LOFAR and SKA will provide useful insight at different radio frequencies and thus can be helpful to model the Galactic magnetic fields.
+
 \begin{enumerate}
 
-    \item The presence of magnetic fields and non-thermal electrons at high galactic latitudes are necessary to explain the synchrotron radiation observed. if m should equipartition exist. %parameters are delicately balanced !
-    \item 
-    \item Plasma $\beta$ condition ?! 
+ 
     \item Variance for the different maps:
     
     \item High uncertainities in parameters means we need better probes to constrain the models. LOFAR and SKA radio band but different frequencies might be helpful
-    \item the arrival directions of cosmic rays are sensitive to the strengths of the field and should 
-    the turbulent field be very high source localisation will be impossible
-    \item provide the value of the variances
-    
-    \Vasu{Introduce the definition of energy 
-    densities}
-    
+   
 \end{enumerate}
 
 %\clearpage
