--- a/references.bib
+++ b/references.bib
@@ -247,6 +247,37 @@ url = {https://www.sciencedirect.com/science/article/pii/S0273117701001089},
 author = {M. Boezio and G. Barbiellini and V. Bonvicini and P. Schiavon and A. Vacchi and N. Zampa and D. Bergström and P. Carlson and T. Francke and S. Grinstein and N. Weber and M. Suffert and M. Hof and J. Kremer and W. Menn and M. Simon and S.A. Stephens and M. Ambriola and R. Bellotti and F.S. Cafagna and F. Ciacio and M. Circella and C. {De Marzo} and N. Finetti and P. Papini and S. Piccardi and P. Spillantini and S. Bartalucci and M. Ricci and C. Grimani and M. Casolino and M.P. {De Pascale} and A. Morselli and P. Picozza and R. Sparvoli and J.W. Mitchell and J.F. Ormes and R.E. Streitmatter and U. Bravar and S.J. Stochaj},
 abstract = {Two recent ballon-borne experiments have been performed by the WiZard/CAPRICE collaboration in order to study the electron and positron components in the cosmic radiation. On 1994 August 8–9 the CAPRICE94 experiment flew from norther Canada and on 1998 May 28–29 the CAPRICE98 experiment flew from New Mexico, USA at altitudes corresponding to 3.9 and 5.5 g/cm2 of average residual atmosphere respectively. The apparatus were equipped with a Ring Imaging Cherenkov (RICH) detector, a time-of-flight system, a superconducting magnet spectrometer with a tracking system and a 7-radiation-length silicon-tungsten imaging calorimeter. The RICH used in 1994 had a solid NaF radiator while in 1998 the RICH had a C4F10 gaseous radiator. We report on the electron and positron spectra and positron fraction at the top of the atmosphere from few hundred MeV to 40 GeV measured by these two experiments.}
 }
+%% PT 11
+
+@article{PT11_2011,
+   title={DERIVING THE GLOBAL STRUCTURE OF THE GALACTIC MAGNETIC FIELD FROM FARADAY ROTATION MEASURES OF EXTRAGALACTIC SOURCES},
+   volume={738},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/738/2/192},
+   DOI={10.1088/0004-637x/738/2/192},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Pshirkov, M. S. and Tinyakov, P. G. and Kronberg, P. P. and Newton-McGee, K. J.},
+   year={2011},
+   month={Aug},
+   pages={192} }
+
+%% Sun 2010
+@article{Sun_2010,
+   title={The Galactic halo magnetic field revisited},
+   volume={10},
+   ISSN={1674-4527},
+   url={http://dx.doi.org/10.1088/1674-4527/10/12/009},
+   DOI={10.1088/1674-4527/10/12/009},
+   number={12},
+   journal={Research in Astronomy and Astrophysics},
+   publisher={IOP Publishing},
+   author={Sun, Xiao-Hui and Reich, Wolfgang},
+   year={2010},
+   month={11},
+   pages={1287–1297} }
+
 %% AMS 2002
 @ARTICLE{AMS_2002,
        author = {{AMS Collaboration} and {Aguilar}, M. and {Alcaraz}, J. and {Allaby}, J. and {Alpat}, B. and {Ambrosi}, G. and {Anderhub}, H. and {Ao}, L. and {Arefiev}, A. and {Azzarello}, P. and {Babucci}, E. and {Baldini}, L. and {Basile}, M. and {Barancourt}, D. and {Barao}, F. and {Barbier}, G. and {Barreira}, G. and {Battiston}, R. and {Becker}, R. and {Becker}, U. and {Bellagamba}, L. and {B{\'e}n{\'e}}, P. and {Berdugo}, J. and {Berges}, P. and {Bertucci}, B. and {Biland}, A. and {Bizzaglia}, S. and {Blasko}, S. and {Boella}, G. and {Boschini}, M. and {Bourquin}, M. and {Brocco}, L. and {Bruni}, G. and {Bu{\'e}nerd}, M. and {Burger}, J.~D. and {Burger}, W.~J. and {Cai}, X.~D. and {Camps}, C. and {Cannarsa}, P. and {Capell}, M. and {Casadei}, D. and {Casaus}, J. and {Castellini}, G. and {Cecchi}, C. and {Chang}, Y.~H. and {Chen}, H.~F. and {Chen}, H.~S. and {Chen}, Z.~G. and {Chernoplekov}, N.~A. and {Chiueh}, T.~H. and {Cho}, K. and {Choi}, M.~J. and {Choi}, Y.~Y. and {Chuang}, Y.~L. and {Cindolo}, F. and {Commichau}, V. and {Contin}, A. and {Cortina-Gil}, E. and {Cristinziani}, M. and {da Cunha}, J.~P. and {Dai}, T.~S. and {Delgado}, C. and {Deus}, J.~D. and {Dinu}, N. and {Djambazov}, L. and {D'Antone}, I. and {Dong}, Z.~R. and {Emonet}, P. and {Engelberg}, J. and {Eppling}, F.~J. and {Eronen}, T. and {Esposito}, G. and {Extermann}, P. and {Favier}, J. and {Fiandrini}, E. and {Fisher}, P.~H. and {Fluegge}, G. and {Fouque}, N. and {Galaktionov}, Yu. and {Gervasi}, M. and {Giusti}, P. and {Grandi}, D. and {Grimms}, O. and {Gu}, W.~Q. and {Hangarter}, K. and {Hasan}, A. and {Hermel}, V. and {Hofer}, H. and {Huang}, M.~A. and {Hungerford}, W. and {Ionica}, M. and {Ionica}, R. and {Jongmanns}, M. and {Karlamaa}, K. and {Karpinski}, W. and {Kenney}, G. and {Kenny}, J. and {Kim}, D.~H. and {Kim}, G.~N. and {Kim}, K.~S. and {Kim}, M.~Y. and {Klimentov}, A. and {Kossakowski}, R. and {Koutsenko}, V. and {Kraeber}, M. and {Laborie}, G. and {Laitinen}, T. and {Lamanna}, G. and {Lanciotti}, E. and {Laurenti}, G. and {Lebedev}, A. and {Lechanoine-Leluc}, C. and {Lee}, M.~W. and {Lee}, S.~C. and {Levi}, G. and {Levtchenko}, P. and {Liu}, C.~L. and {Liu}, H.~T. and {Lopes}, I. and {Lu}, G. and {Lu}, Y.~S. and {L{\"u}belsmeyer}, K. and {Luckey}, D. and {Lustermann}, W. and {Ma{\~n}a}, C. and {Margotti}, A. and {Mayet}, F. and {McNeil}, R.~R. and {Meillon}, B. and {Menichelli}, M. and {Mihul}, A. and {Mourao}, A. and {Mujunen}, A. and {Palmonari}, F. and {Papi}, A. and {Park}, H.~B. and {Park}, W.~H. and {Pauluzzi}, M. and {Pauss}, F. and {Perrin}, E. and {Pesci}, A. and {Pevsner}, A. and {Pimenta}, M. and {Plyaskin}, V. and {Pojidaev}, V. and {Pohl}, M. and {Postolache}, V. and {Produit}, N. and {Rancoita}, P.~G. and {Rapin}, D. and {Raupach}, F. and {Ren}, D. and {Ren}, Z. and {Ribordy}, M. and {Richeux}, J.~P. and {Riihonen}, E. and {Ritakari}, J. and {Ro}, S. and {Roeser}, U. and {Rossin}, C. and {Sagdeev}, R. and {Santos}, D. and {Sartorelli}, G. and {Sbarra}, C. and {Schael}, S. and {Schultz von Dratzig}, A. and {Schwering}, G. and {Scolieri}, G. and {Seo}, E.~S. and {Shin}, J.~W. and {Shoutko}, V. and {Shoumilov}, E. and {Siedling}, R. and {Son}, D. and {Song}, T. and {Steuer}, M. and {Sun}, G.~S. and {Suter}, H. and {Tang}, X.~W. and {Ting}, Samuel C.~C. and {Ting}, S.~M. and {Tornikoski}, M. and {Torsti}, J. and {Tr{\"u}mper}, J. and {Ulbricht}, J. and {Urpo}, S. and {Valtonen}, E. and {Vandenhirtz}, J. and {Velcea}, F. and {Velikhov}, E. and {Verlaat}, B. and {Vetlitsky}, I. and {Vezzu}, F. and {Vialle}, J.~P. and {Viertel}, G. and {Vit{\'e}}, D. and {von Gunten}, H. and {Wicki}, S. Waldmeier and {Wallraff}, W. and {Wang}, B.~C. and {Wang}, J.~Z. and {Wang}, Y.~H. and {Wiik}, K. and {Williams}, C. and {Wu}, S.~X. and {Xia}, P.~C. and {Yan}, J.~L. and {Yan}, L.~G. and {Yang}, C.~G. and {Yang}, J. and {Yang}, M. and {Ye}, S.~W. and {Yeh}, P. and {Xu}, Z.~Z. and {Zhang}, H.~Y. and {Zhang}, Z.~P. and {Zhao}, D.~X. and {Zhu}, G.~Y. and {Zhu}, W.~Z. and {Zhuang}, H.~L. and {Zichichi}, A. and {Zimmermann}, B. and {Zuccon}, P.},
